--- a/Home.html
+++ b/Home.html
@@ -2,11 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Terrarium's Inc</title>
+<title>Rainier Terrariums</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<h1 class="h1index">Rainier Terrariums</h1>
+<h1 class="h1index">Rainier Terrariums </h1>
+	
+	<div class="Logo">
+<img src="Images/Logo.jpg" alt="Logo" height="73.5px">
+		</div>
 
 	<div class="Navigation">
 | <a href="Home.html">Home</a> |
@@ -21,8 +25,10 @@
 
 <div class="Abt">
 	<h3>About Us</h3>
-<p>Welcome to Terrarium's Inc, the Place to be for Plants, Terrarium's, Pet Enclosures, And more.</p>
+<p>Welcome to Rainier Terrariums, the Place to be for Plants, Terrarium's, Pet Enclosures, And more.</p>
 </div>
 
+	
+	
 </body>
 </html>
