--- a/Shop.html
+++ b/Shop.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
+	
 <body>
 
 	<h1 class="h1index">Rainier Terrariums</h1>
@@ -17,12 +18,53 @@
 	</div>
 
 	<div class="venusfly">
-	<a href=" https://carnivorousplantnursery.com/collections/venus-flytrap/products/venus-flytrap-typical">
+	<a href=" https://carnivorousplantnursery.com/collections/venus-flytrap/products/venus-flytrap-typical" target="_blank">
 	<img src="Images/venus1.jpg" alt="1" >
 		<p>Venus Flytrap - Typical</p>
 		<p>from $6.95</p>
 	</a>
 	</div>
 
+	<div class="pitcher">
+	<a href="https://carnivorousplantnursery.com/collections/sarracenia/products/sarracenia-purpurea-purpurea" target="_blank">
+		<img src="Images/Pitcher.jpg" alt="Pitcher">
+		<p>Sarracenia purpurea purpurea</p>
+		<p>from $7.95</p>
+		</a>
+	</div>
+	
+	<div class="sundew">
+	<a href="https://carnivorousplantnursery.com/collections/sundews/products/drosera-capensis" target="_blank">
+		<img src="Images/Sundew.jpg" alt="sundew">
+		<p>Drosera capensis</p>
+		<p>$5.95</p>
+		</a>	
+	</div>
+	
+	<div class="Bladderworts">
+	<a href="https://carnivorousplantnursery.com/collections/bladderworts/products/utricularia-gibba" target="_blank">
+		<img src="Images/Bladder.jpg" alt="bladder">
+		<p>Utricularia gibba</p>
+		<p>$7.95</p>
+		</a>
+	</div>
+	
+	<div class="Nepenthes">
+	<a href="https://carnivorousplantnursery.com/collections/nepenthes/products/nepenthes-alata" target="_blank">
+		<img src="Images/Nepenthe.jpg" alt="Nepenthes">
+		<p>Nepenthes alata</p>
+		<p>from $9.95</p>
+		</a>
+	</div>
+	
+	<div class="Cephalotus">
+	<a href="https://carnivorousplantnursery.com/collections/cephalotus/products/cephalotus-follicularis" target="_blank">
+		<img src="Images/cephalotus.jpg" alt="Cephalotus">
+		<p>Cephalotus follicularis</p>
+		<p>from $26.95</p>
+		</a>
+	</div>
+	
+	
 </body>
 </html>
