--- a/Social.html
+++ b/Social.html
@@ -16,10 +16,19 @@
 <a href="Contact.html">Contact Us</a> |
 	</div>
 	<div class="Socialmedia">
-<h2>Follow us on Instagram:</h2>
-<a href=" https://www.instagram.com/rainier_terrariums/" id="Instagram" >
+<h2>Follow us on Instagram</h2>
+<a href=" https://www.instagram.com/rainier_terrariums/" id="Instagram" target="_blank">
 <p> follow here</p>
-</a>
+	</a>
+	
+	<br>
+	
+	
+	<h2>Follow us on Twitter</h2>
+<a href=" https://twitter.com/RTerrariums" id="twitter" target="_blank">
+<p> follow here</p>
+	</a>
 	</div>
+	
 </body>
 </html>
