--- a/Contact.html
+++ b/Contact.html
@@ -7,14 +7,15 @@
 </head>
 
 <body>
-	<h1 class="h1index">Rainier Terrariums</h1>
+	<h1 class="h1index">Rainier Terrariums </h1>
+	<img src="Images/Logo.jpg" alt="Logo" height="73.5px" class="logo">
 
-	<div class="Navigation">
-| <a href="Home.html">Home</a> |
-<a href="Shop.html">Store</a> |
-<a href="Social.html">Social Links</a>  |
-<a href="Contact.html">Contact Us</a> |
-	</div>
+	<nav>
+		| <a href="Home.html">Home</a> |
+		<a href="Shop.html">Store</a> |
+		<a href="Social.html">Social Links</a> |
+		<a href="Contact.html">Contact Us</a> |
+	</nav>
 
 	<div class="contact">
 	 <form name="Feedback" method="post" action="mailto:rainierterrariums@gmail.com" enctype="text/plain">
