--- a/Home.html
+++ b/Home.html
@@ -1,34 +1,30 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Rainier Terrariums</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-<h1 class="h1index">Rainier Terrariums </h1>
-	
-	<div class="Logo">
-<img src="Images/Logo.jpg" alt="Logo" height="73.5px">
+	<head>
+		<meta charset="utf-8">
+		<title>Rainier Terrariums</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
+	</head>
+	<body>
+		<div class="navbar">
+			<img src="Images/Logo.jpg" alt="Logo" height="73.5px" class="logo">
+			<h1 class="h1index">Rainier Terrariums </h1>
+
+			<nav>
+				<ul>
+					<li><a href="home.html">Home</a></li>
+					<li><a href="shop.html=">Shop</a></li>
+					<li><a href="social.html">Social Links</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+				</ul>
+			</nav>
 		</div>
 
-	<div class="Navigation">
-| <a href="Home.html">Home</a> |
-<a href="Shop.html">Store</a> |
-<a href="Social.html">Social Links</a>  |
-<a href="Contact.html">Contact Us</a> |
-	</div>
+		<img src="Images/terrarium .jpg" alt="terrarium" class="imghome">
 
-	<div class="imghome">
-	<img src="Images/terrarium .jpg" alt="terrarium">
-	</div>
-
-<div class="Abt">
-	<h3>About Us</h3>
-<p>Welcome to Rainier Terrariums, the Place to be for Plants, Terrarium's, Pet Enclosures, And more.</p>
-</div>
-
-	
-	
-</body>
+		<div class="Abt">
+			<h3>About Us</h3>
+			<p>Welcome to Rainier Terrariums, the Place to be for Plants, Terrarium's, Pet Enclosures, And more.</p>
+		</div>
+	</body>
 </html>
