--- a/Shop.html
+++ b/Shop.html
@@ -8,14 +8,15 @@
 
 	
 <body>
+	<h1 class="h1index">Rainier Terrariums </h1>
+	<img src="Images/Logo.jpg" alt="Logo" height="73.5px" class="logo">
 
-	<h1 class="h1index">Rainier Terrariums</h1>
-	<div class="Navigation">
-| <a href="Home.html">Home</a> |
-<a href="Shop.html">Store</a> |
-<a href="Social.html">Social Links</a>  |
-<a href="Contact.html">Contact Us</a> |
-	</div>
+	<nav>
+		| <a href="Home.html">Home</a> |
+		<a href="Shop.html">Store</a> |
+		<a href="Social.html">Social Links</a> |
+		<a href="Contact.html">Contact Us</a> |
+	</nav>
 
 	<div class="venusfly">
 	<a href=" https://carnivorousplantnursery.com/collections/venus-flytrap/products/venus-flytrap-typical" target="_blank">
