--- a/Social.html
+++ b/Social.html
@@ -7,14 +7,16 @@
 </head>
 
 <body>
-	<h1 class="h1index">Rainier Terrariums</h1>
+	<h1 class="h1index">Rainier Terrariums </h1>
+	<img src="Images/Logo.jpg" alt="Logo" height="73.5px" class="logo">
 
-	<div class="Navigation">
-| <a href="Home.html">Home</a> |
-<a href="Shop.html">Store</a> |
-<a href="Social.html">Social Links</a>  |
-<a href="Contact.html">Contact Us</a> |
-	</div>
+	<nav>
+		| <a href="Home.html">Home</a> |
+		<a href="Shop.html">Store</a> |
+		<a href="Social.html">Social Links</a> |
+		<a href="Contact.html">Contact Us</a> |
+	</nav>
+	
 	<div class="Socialmedia">
 <h2>Follow us on Instagram</h2>
 <a href=" https://www.instagram.com/rainier_terrariums/" id="Instagram" target="_blank">
