--- a/Home.html
+++ b/Home.html
@@ -9,7 +9,7 @@
 <h1 class="h1index">Rainier Terrariums </h1>
 	
 	<div class="Logo">
-<img src="Images/Logo.jpg" alt="Logo" height="73.5px">
+<img src="Logo.jpg" alt="Logo" height="73.5px">
 		</div>
 
 	<div class="Navigation">
@@ -20,7 +20,7 @@
 	</div>
 
 	<div class="imghome">
-	<img src="Images/terrarium .jpg" alt="terrarium">
+	<img src="terrarium .jpg" alt="terrarium">
 	</div>
 
 <div class="Abt">
