--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Contact Us</title>
+<title>Rainier Terrariums</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
-	<h1 class="h1index">Rainier Terrariums</h1>
+<h1 class="h1index">Rainier Terrariums </h1>
+	
+	<div class="Logo">
+<img src="Logo.jpg" alt="Logo" height="73.5px">
+		</div>
 
 	<div class="Navigation">
 | <a href="Home.html">Home</a> |
@@ -16,20 +19,16 @@
 <a href="Contact.html">Contact Us</a> |
 	</div>
 
-	<div class="contact">
-	 <form name="Feedback" method="post" action="mailto:	rainierterrariums@gmail.com" enctype="text/plain">
-		 <h2>Email Us</h2>
-		<p>Send questions, feedback and comments:</p>
-		 <textarea name="comment" cols="60" rows="5" placeholder="Type Here"></textarea>
-	<input type="submit" value="Send Form"/>
-		</form>
+	<div class="imghome">
+	<img src="terrarium .jpg" alt="terrarium">
+	</div>
 
+<div class="Abt">
+	<h3>About Us</h3>
+<p>Welcome to Rainier Terrariums, the Place to be for Plants, Terrarium's, Pet Enclosures, And more.</p>
+</div>
 
-
-		</div>
-
-
-
-
+	
+	
 </body>
 </html>
