--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
 	<h1 class="h1index">Rainier Terrariums</h1>
 
 	<div class="Navigation">
-| <a href="Home.html">Home</a> |
+| <a href="index.html">Home</a> |
 <a href="Shop.html">Store</a> |
 <a href="Social.html">Social Links</a>  |
 <a href="Contact.html">Contact Us</a> |
