--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Rainier Terrariums</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="icon" href="Simple Icon.png" type="image/x-icon">
 </head>
 <body>
 <h1 class="h1index">Rainier Terrariums </h1>
