--- a/Shop.html
+++ b/Shop.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Our Store</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="icon" href="Simple Icon.png" type="image/x-icon">
 </head>
 
 	
