--- a/Social.html
+++ b/Social.html
@@ -28,6 +28,7 @@
 	
 	<h2>Follow us on Twitter</h2>
 <a href=" https://twitter.com/RTerrariums" id="twitter" target="_blank">
+	<img src="twitter-icon.png" alt="twitter">
 <p> follow here</p>
 	</a>
 	</div>
