Changed a lot of stuff

--- a/Contact.html
+++ b/Contact.html
@@ -1,36 +1,36 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Contact Us</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-</head>
+	<head>
+		<meta charset="utf-8">
+		<title>Rainier Terrariums</title>
+		<link rel="stylesheet" href="styles.css">
+		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
+	</head>
+	<body>
+		<div class="navbar">
+			<img src="images/logo.png" alt="Logo" height="60px" class="logo">
+			<h1>Rainier Terrariums</h1>
 
-<body>
-	<h1 class="h1index">Rainier Terrariums </h1>
-	<img src="Images/Logo.jpg" alt="Logo" height="73.5px" class="logo">
-
-	<nav>
-		| <a href="Home.html">Home</a> |
-		<a href="Shop.html">Store</a> |
-		<a href="Social.html">Social Links</a> |
-		<a href="Contact.html">Contact Us</a> |
-	</nav>
-
-	<div class="contact">
-	 <form name="Feedback" method="post" action="mailto:rainierterrariums@gmail.com" enctype="text/plain">
-		 <h2>Email Us</h2>
-		<p>Send questions, feedback and comments:</p>
-		 <textarea name="comment" cols="60" rows="5" placeholder="Type Here"></textarea>
-	<input type="submit" value="Send Form"/>
-		 </form>
-		
-
-
+			<nav>
+				<ul>
+					<li><a href="home.html">Home</a></li>
+					<li><a href="shop.html">Shop</a></li>
+					<li><a href="social.html">Social Links</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+				</ul>
+			</nav>
 		</div>
 
-
-
-
-</body>
+		<article style="height: 100vh;">
+			<div class="content" style="margin-top: 150px;">
+				<form name="Feedback" method="post" action="mailto:rainierterrariums@gmail.com" enctype="text/plain">
+					<h2>Email Us</h2>
+					<p>Send questions, feedback and comments:</p>
+					<textarea name="comment" cols="60" rows="5" placeholder="Type here..."></textarea>
+					<br/>
+					<input type="submit" value="Send Form"/>
+				</form>
+			</div>
+		</article>
+	</body>
 </html>
