--- a/Home.html
+++ b/Home.html
@@ -3,28 +3,33 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Rainier Terrariums</title>
-		<link rel="stylesheet" type="text/css" href="styles.css">
+		<link rel="stylesheet" href="styles.css">
+		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div class="navbar">
-			<img src="Images/Logo.jpg" alt="Logo" height="73.5px" class="logo">
-			<h1 class="h1index">Rainier Terrariums </h1>
+			<img src="images/logo.png" alt="Logo" height="60px" class="logo">
+			<h1>Rainier Terrariums</h1>
 
 			<nav>
 				<ul>
 					<li><a href="home.html">Home</a></li>
-					<li><a href="shop.html=">Shop</a></li>
+					<li><a href="shop.html">Shop</a></li>
 					<li><a href="social.html">Social Links</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
 		</div>
 
-		<img src="Images/terrarium .jpg" alt="terrarium" class="imghome">
+		<div class="title-section">
 
-		<div class="Abt">
-			<h3>About Us</h3>
-			<p>Welcome to Rainier Terrariums, the Place to be for Plants, Terrarium's, Pet Enclosures, And more.</p>
 		</div>
+
+		<article>
+			<div class="content">
+				<h1>About Us</h1>
+				<p>Welcome to Rainier Terrariums, the Place to be for Plants, Terrarium's, Pet Enclosures, And more.</p>
+			</div>
+		</article>
 	</body>
 </html>
