--- a/Social.html
+++ b/Social.html
@@ -1,36 +1,38 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Social Links</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-</head>
+	<head>
+		<meta charset="utf-8">
+		<title>Rainier Terrariums</title>
+		<link rel="stylesheet" href="styles.css">
+		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
+	</head>
+	<body>
+		<div class="navbar">
+			<img src="images/logo.png" alt="Logo" height="60px" class="logo">
+			<h1>Rainier Terrariums</h1>
 
-<body>
-	<h1 class="h1index">Rainier Terrariums </h1>
-	<img src="Images/Logo.jpg" alt="Logo" height="73.5px" class="logo">
-
-	<nav>
-		| <a href="Home.html">Home</a> |
-		<a href="Shop.html">Store</a> |
-		<a href="Social.html">Social Links</a> |
-		<a href="Contact.html">Contact Us</a> |
-	</nav>
-	
-	<div class="Socialmedia">
-<h2>Follow us on Instagram</h2>
-<a href=" https://www.instagram.com/rainier_terrariums/" id="Instagram" target="_blank">
-<p> follow here</p>
-	</a>
-	
-	<br>
-	
-	
-	<h2>Follow us on Twitter</h2>
-<a href=" https://twitter.com/RTerrariums" id="twitter" target="_blank">
-<p> follow here</p>
-	</a>
-	</div>
-	
-</body>
+			<nav>
+				<ul>
+					<li><a href="home.html">Home</a></li>
+					<li><a href="shop.html">Shop</a></li>
+					<li><a href="social.html">Social Links</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+				</ul>
+			</nav>
+		</div>
+		
+		<article style="height: 100vh;">
+			<div class="content" style="margin-top: 150px;">
+				<h2>Follow us on Instagram</h2>
+				<a href=" https://www.instagram.com/rainier_terrariums/" id="Instagram" target="_blank">
+					<p> follow here</p>
+				</a>
+				<br>
+				<h2>Follow us on Twitter</h2>
+				<a href=" https://twitter.com/RTerrariums" id="twitter" target="_blank">
+					<p> follow here</p>
+				</a>
+			</div>
+		</article>
+	</body>
 </html>
