--- a/Contact.html
+++ b/Contact.html
@@ -13,10 +13,10 @@
 
 			<nav>
 				<ul>
-					<li><a href="home.html">Home</a></li>
-					<li><a href="shop.html">Shop</a></li>
-					<li><a href="social.html">Social Links</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="Home.html">Home</a></li>
+					<li><a href="Shop.html">Shop</a></li>
+					<li><a href="Social.html">Social Links</a></li>
+					<li><a href="Contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
 		</div>
