--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1 class="h1index">Rainier Terrariums </h1>
 	
 	<div class="Logo">
-<img src="Logo.jpg" alt="Logo" height="73.5px">
+<img src="images/Logo.jpg" alt="Logo" height="73.5px">
 		</div>
 
 	<div class="Navigation">
@@ -21,7 +21,7 @@
 	</div>
 
 	<div class="imghome">
-	<img src="terrarium.jpg" alt="terrarium">
+	<img src="images/terrarium.jpg" alt="terrarium">
 	</div>
 
 <div class="Abt">
