--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Rainier Terrariums</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" href="images/Simple Icon.png" type="image/x-icon">
 </head>
 <body>
