--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Rainier Terrariums</title>
-	<link rel="stylesheet" href="styles.css">
-	<link rel="icon" href="images/Simple Icon.png" type="image/x-icon">
-</head>
-<body>
-<h1 class="h1index">Rainier Terrariums </h1>
-	
-	<div class="Logo">
-<img src="images/Logo.jpg" alt="Logo" height="73.5px">
+	<head>
+		<meta charset="utf-8">
+		<title>Rainier Terrariums</title>
+		<link rel="stylesheet" href="styles.css">
+		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
+	</head>
+	<body>
+		<div class="navbar">
+			<img src="images/logo.png" alt="Logo" height="60px" class="logo">
+			<h1>Rainier Terrariums</h1>
+
+			<nav>
+				<ul>
+					<li><a href="Home.html">Home</a></li>
+					<li><a href="Shop.html">Shop</a></li>
+					<li><a href="Social.html">Social Links</a></li>
+					<li><a href="Contact.html">Contact Us</a></li>
+				</ul>
+			</nav>
 		</div>
 
-	<div class="Navigation">
-| <a href="Home.html">Home</a> |
-<a href="Shop.html">Store</a> |
-<a href="Social.html">Social Links</a>  |
-<a href="Contact.html">Contact Us</a> |
-	</div>
+		<div class="title-section">
 
-	<div class="imghome">
-	<img src="images/terrarium.jpg" alt="terrarium">
-	</div>
+		</div>
 
-<div class="Abt">
-	<h3>About Us</h3>
-<p>Welcome to Rainier Terrariums, the Place to be for Plants, Terrarium's, Pet Enclosures, And more.</p>
-</div>
-
-	
-	
-</body>
+		<article>
+			<div class="content">
+				<h1>About Us</h1>
+				<p>Welcome to Rainier Terrariums, the Place to be for Plants, Terrarium's, Pet Enclosures, And more.</p>
+			</div>
+		</article>
+	</body>
 </html>
