--- a/Shop.html
+++ b/Shop.html
@@ -26,62 +26,62 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href=" https://carnivorousplantnursery.com/collections/venus-flytrap/products/venus-flytrap-typical" target="_blank">
-								<img src="images/venus1.jpg" alt="Venus Flytrap" class="product-img">
+							<a href="https://amzn.to/2LREg86" target="_blank">
+								<img src="images/product2.jpg" alt="Mkono" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>Venus Flytrap - Typical</p>
-									<p>from $6.95</p>
+									<p>Mkono 3 Packs Mini Glass Geometric Terrarium</p>
+									<p>$23.99</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://carnivorousplantnursery.com/collections/sarracenia/products/sarracenia-purpurea-purpurea" target="_blank">
-								<img src="images/pitcher.jpg" alt="Pitcher" class="product-img">
+							<a href="https://amzn.to/34mfweK" target="_blank">
+								<img src="images/Product1.jpg" alt="kids" class="product-img">
 								<div class="product-description">
-									<p>Sarracenia purpurea purpurea</p>
-									<p>from $7.95</p>
+									<p>Light-up Terrarium Kit for Kids</p>
+									<p>$24.99</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://carnivorousplantnursery.com/collections/sundews/products/drosera-capensis" target="_blank">
-								<img src="images/sundew.jpg" alt="Sundew" class="product-img">
+							<a href="https://amzn.to/2rIoe9X" target="_blank">
+								<img src="images/product3.jpg" alt="kook" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>Drosera capensis</p>
-									<p>$5.95</p>
+									<p>KooK Geometric Glass Terrarium</p>
+									<p>$21.95</p>
 								</div>
 							</a>	
 						</td>
 						<td class="product">
-							<a href="https://carnivorousplantnursery.com/collections/bladderworts/products/utricularia-gibba" target="_blank">
-								<img src="images/bladder.jpg" alt="Bladder" class="product-img">
+							<a href="https://amzn.to/2PI3bfD" target="_blank">
+								<img src="images/product4.jpg" alt="venus" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>Utricularia gibba</p>
-									<p>$7.95</p>
+									<p>Nature Gift Store Adult Venus Flytrap </p>
+									<p>$12.85</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://carnivorousplantnursery.com/collections/nepenthes/products/nepenthes-alata" target="_blank">
-								<img src="images/nepenthe.jpg" alt="Nepenthes" class="product-img">
+							<a href="https://amzn.to/2rzSaVT" target="_blank">
+								<img src="images/product5.jpg" alt="exo" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>Nepenthes alata</p>
-									<p>from $9.95</p>
+									<p>EXO-TERRA Nano Wide Terrarium</p>
+									<p>$29.39</p>
 								</div>
 							</a>
 						</td>
 					</tr>
 					<tr>
 						<td class="product">
-							<a href="https://carnivorousplantnursery.com/collections/cephalotus/products/cephalotus-follicularis" target="_blank">
-								<img src="images/cephalotus.jpg" alt="Cephalotus" class="product-img">
+							<a href="https://amzn.to/2PjZAW1" target="_blank">
+								<img src="images/product6.jpg" alt="kit" class="product-img">
 								<div class="product-description">
-									<p>Cephalotus follicularis</p>
-									<p>from $26.95</p>
+									<p>Cute Farms Terrarium Starter Kit</p>
+									<p>$19.95</p>
 								</div>
 							</a>
 						</td>	
