--- a/Home.html
+++ b/Home.html
@@ -22,14 +22,7 @@
 		</div>
 
 		<div class="title-section">
-
+			<h1 class="title">The place to be for plants, terrariums, critter enclosures and more...</h1>
 		</div>
-
-		<article>
-			<div class="content">
-				<h1>About Us</h1>
-				<p>Welcome to Rainier Terrariums, the Place to be for Plants, Terrarium's, Pet Enclosures, And more.</p>
-			</div>
-		</article>
 	</body>
 </html>
