--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,10 @@
 		</div>
 
 		<div class="title-section">
-			<h1 class="title">The place to be for plants, terrariums, critter enclosures and more...</h1>
+			<div class="title-box">
+				<img src="images/text-logo.png" alt="Text Logo" class="text-logo">
+				<h1 class="subtitle">The place to be for plants, terrariums, critter enclosures and more...</h1>
+			</div>
 		</div>
 	</body>
 </html>
