--- a/Social.html
+++ b/Social.html
@@ -23,14 +23,14 @@
 		
 		<article style="height: 100vh;">
 			<div class="content" style="margin-top: 150px;">
-				<h2>Follow us on Instagram</h2>
-				<a href=" https://www.instagram.com/rainier_terrariums/" id="Instagram" target="_blank">
-					<p> follow here</p>
+				<a href=" https://www.instagram.com/rainier_terrariums/" target="_blank" class="social-link">
+					<img src="images/insta-icon.png" class="social-icon">
+					<h2>Follow us on Instagram</h2>
 				</a>
 				<br>
-				<h2>Follow us on Twitter</h2>
-				<a href=" https://twitter.com/RTerrariums" id="twitter" target="_blank">
-					<p> follow here</p>
+				<a href=" https://twitter.com/RTerrariums" target="_blank" class="social-link">
+					<img src="images/twitter-icon.png" class="social-icon">
+					<h2>Follow us on Twitter</h2>
 				</a>
 			</div>
 		</article>
