--- a/Shop.html
+++ b/Shop.html
@@ -52,7 +52,7 @@
 									<p>KooK Geometric Glass Terrarium</p>
 									<p>$21.95</p>
 								</div>
-							</a>	
+							</a>
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2PI3bfD" target="_blank">
@@ -78,16 +78,72 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2PjZAW1" target="_blank">
-								<img src="images/product6.jpg" alt="kit" class="product-img">
+								<img src="images/product6.jpg" alt="cute" class="product-img">
 								<div class="product-description">
 									<p>Cute Farms Terrarium Starter Kit</p>
 									<p>$19.95</p>
 								</div>
 							</a>
-						</td>	
+						</td>
+					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/34mNb82" target="_blank">
+								<img src="images/product7.jpg" alt="mkono2" class="product-img">
+								<div class="product-description">
+									<p>Mkono Plant Terrarium Display Glass Tabletop </p>
+									<p>$11.99</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/36D7dgh" target="_blank">
+								<img src="images/product8.jpg" alt="Essentials" class="product-img">
+								<div class="product-description">
+									<p>Terrarium Essentials Kit </p>
+									<p>$21.99</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2PiIRm8" target="_blank">
+								<img src="images/product9.jpg" alt="mini" class="product-img">
+								<div class="product-description">
+									<p>Mini Ferns for Terrariums/Fairy Garden </p>
+									<p>$14.99</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/35lmuC8" target="_blank">
+								<img src="images/product10.jpg" alt="h" class="product-img">
+								<div class="product-description">
+									<p>H Potter Glass Terrarium </p>
+									<p>$189.50</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2PkUnxb" target="_blank">
+								<img src="images/product11.jpg" alt="H potter" class="product-img">
+								<div class="product-description">
+									<p>H Potter Terrarium Kit Succulent Soil Supplies for Plants Cactus</p>
+									<p>$16.95</p>
+								</div>
+							</a>
+						</td>
 					</tr>
 				</table>
 			</div>
 		</article>
 	</body>
 </html>
+
