--- a/index.html
+++ b/index.html
@@ -22,14 +22,10 @@
 		</div>
 
 		<div class="title-section">
-
-		</div>
-
-		<article>
-			<div class="content">
-				<h1>About Us</h1>
-				<p>Welcome to Rainier Terrariums, the Place to be for Plants, Terrarium's, Pet Enclosures, And more.</p>
+			<div class="title-box">
+				<img src="images/text-logo.png" alt="Text Logo" class="text-logo">
+				<h1 class="subtitle">The place to be for plants, terrariums, critter enclosures and more...</h1>
 			</div>
-		</article>
+		</div>
 	</body>
 </html>
