--- a/shop.html
+++ b/shop.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<script data-ad-client="ca-pub-8691955634362390" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<meta charset="utf-8">
 		<title>Rainier Terrariums</title>
 		<link rel="stylesheet" href="styles.css">
