--- a/shop.html
+++ b/shop.html
@@ -1,7 +1,16 @@
 <!doctype html>
 <html>
 	<head>
-		<script data-ad-client="ca-pub-8691955634362390" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154593775-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154593775-1');
+</script>
+
 		<meta charset="utf-8">
 		<title>Rainier Terrariums</title>
 		<link rel="stylesheet" href="styles.css">
