--- a/shop.html
+++ b/shop.html
@@ -141,9 +141,64 @@
 							</a>
 						</td>
 					</tr>
+				</tr>
+				<tr>
+					<td class="product">
+						<a href="https://amzn.to/2PMI63O" target="_blank">
+							<img src="images/product12.jpg" alt="5" class="product-img">
+							<div class="product-description">
+								<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
+								<p>$17.95</p>
+							</div>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="product">
+						<a href="https://amzn.to/35kPDgQ" target="_blank">
+							<img src="images/product14.jpg" alt="moss" class="product-img">
+							<div class="product-description">
+								<p>Galápagos (05213) Terrarium Sphagnum Moss</p>
+								<p>$5.09 </p>
+							</div>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="product">
+						<a href="https://amzn.to/2LTLybA" target="_blank">
+							<img src="images/product15.jpg" alt="3" class="product-img">
+							<div class="product-description">
+								<p>3 Small Sized B52 Giant Venus Flytraps</p>
+								<p>$21.39</p>
+							</div>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="product">
+						<a href="https://amzn.to/36CsUNu" target="_blank">
+							<img src="images/product16.jpg" alt="soil" class="product-img">
+							<div class="product-description">
+								<p>Organic Carnivorous Plant Soil - 1 Gallon </p>
+								<p>$8.95</p>
+							</div>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="product">
+						<a href="https://amzn.to/2RUivII" target="_blank">
+							<img src="images/product17.jpg" alt="sundew" class="product-img">
+							<div class="product-description">
+								<p>Cape Sundew - Drosera capensis</p>
+								<p>$19.99</p>
+							</div>
+						</a>
+					</td>
+				</tr>
 				</table>
 			</div>
 		</article>
 	</body>
 </html>
-
