--- a/shop.html
+++ b/shop.html
@@ -54,7 +54,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2rIoe9X" target="_blank">
-								<img src="images/product3.jpg" alt="kook" class="product-img">
+								<img src="images/product3.png" alt="kook" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>KooK Geometric Glass Terrarium</p>
@@ -72,9 +72,11 @@
 								</div>
 							</a>
 						</td>
+					</tr>
+					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2rzSaVT" target="_blank">
-								<img src="images/product5.jpg" alt="exo" class="product-img">
+								<img src="images/product5.png" alt="exo" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>EXO-TERRA Nano Wide Terrarium</p>
@@ -82,11 +84,9 @@
 								</div>
 							</a>
 						</td>
-					</tr>
-					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2PjZAW1" target="_blank">
-								<img src="images/product6.jpg" alt="cute" class="product-img">
+								<img src="images/product6.png" alt="cute" class="product-img">
 								<div class="product-description">
 									<p>Cute Farms Terrarium Starter Kit</p>
 									<p>$19.95</p>
@@ -95,7 +95,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/34mNb82" target="_blank">
-								<img src="images/product7.jpg" alt="mkono2" class="product-img">
+								<img src="images/product7.png" alt="mkono2" class="product-img">
 								<div class="product-description">
 									<p>Mkono Plant Terrarium Display Glass Tabletop </p>
 									<p>$11.99</p>
@@ -104,16 +104,18 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/36D7dgh" target="_blank">
-								<img src="images/product8.jpg" alt="Essentials" class="product-img">
+								<img src="images/product8.png" alt="Essentials" class="product-img">
 								<div class="product-description">
 									<p>Terrarium Essentials Kit </p>
 									<p>$21.99</p>
 								</div>
 							</a>
 						</td>
+					</tr>
+					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2PiIRm8" target="_blank">
-								<img src="images/product9.jpg" alt="mini" class="product-img">
+								<img src="images/product9.png" alt="mini" class="product-img">
 								<div class="product-description">
 									<p>Mini Ferns for Terrariums/Fairy Garden </p>
 									<p>$14.99</p>
@@ -122,15 +124,13 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/35lmuC8" target="_blank">
-								<img src="images/product10.jpg" alt="h" class="product-img">
+								<img src="images/product10.png" alt="h" class="product-img">
 								<div class="product-description">
 									<p>H Potter Glass Terrarium </p>
 									<p>$189.50</p>
 								</div>
 							</a>
 						</td>
-					</tr>
-					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2PkUnxb" target="_blank">
 								<img src="images/product11.jpg" alt="H potter" class="product-img">
@@ -142,13 +142,15 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2PMI63O" target="_blank">
-								<img src="images/product12.jpg" alt="5" class="product-img">
+								<img src="images/product12.png" alt="5" class="product-img">
 								<div class="product-description">
 									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
 									<p>$17.95</p>
 								</div>
 							</a>
 						</td>
+					</tr>
+					<tr>
 						<td class="product">
 							<a href="https://amzn.to/35kPDgQ" target="_blank">
 								<img src="images/product14.jpg" alt="moss" class="product-img">
@@ -160,7 +162,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2LTLybA" target="_blank">
-								<img src="images/product15.jpg" alt="3" class="product-img">
+								<img src="images/product15.png" alt="3" class="product-img">
 								<div class="product-description">
 									<p>3 Small Sized B52 Giant Venus Flytraps</p>
 									<p>$21.39</p>
@@ -169,18 +171,16 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/36CsUNu" target="_blank">
-								<img src="images/product16.jpg" alt="soil" class="product-img">
+								<img src="images/product16.png" alt="soil" class="product-img">
 								<div class="product-description">
 									<p>Organic Carnivorous Plant Soil - 1 Gallon </p>
 									<p>$8.95</p>
 								</div>
 							</a>
 						</td>
-					</tr>
-					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2RUivII" target="_blank">
-								<img src="images/product17.jpg" alt="sundew" class="product-img">
+								<img src="images/product17.png" alt="sundew" class="product-img">
 								<div class="product-description">
 									<p>Cape Sundew - Drosera capensis</p>
 									<p>$19.99</p>
