--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 		<title>Rainier Terrariums</title>
 		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
+		<link rel="shortcut icon" href="images/favicon.ico">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154593775-1"></script>
 		<script>
