--- a/shop.html
+++ b/shop.html
@@ -55,7 +55,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2rIoe9X" target="_blank">
-								<img src="images/product3.png" alt="kook" class="product-img">
+								<img src="images/Product3.png" alt="kook" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>KooK Geometric Glass Terrarium</p>
@@ -77,7 +77,7 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2rzSaVT" target="_blank">
-								<img src="images/product5.png" alt="exo" class="product-img">
+								<img src="images/Product5.png" alt="exo" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>EXO-TERRA Nano Wide Terrarium</p>
