--- a/shop.html
+++ b/shop.html
@@ -189,6 +189,34 @@
 							</a>
 						</td>
 					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2PiIRm8" target="_blank">
+								<img src="images/product9.png" alt="mini" class="product-img">
+								<div class="product-description">
+									<p>Mini Ferns for Terrariums/Fairy Garden </p>
+									<p>$14.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2Ep4ACw" target="_blank">
+								<img src="images/product18.jpg" alt="iso" class="product-img">
+								<div class="product-description">
+									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
+									<p>$39.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2RXYLEg" target="_blank">
+								<img src="images/product19.jpg" alt="rock" class="product-img">
+								<div class="product-description">
+									<p>Natural Slate Stone -1 to 3 inch Rocks</p>
+									<p>$15.95</p>
+								</div>
+							</a>
+						</td>
 				</table>
 			</div>
 		</article>
