--- a/shop.html
+++ b/shop.html
@@ -208,6 +208,34 @@
 								</div>
 							</a>
 						</td>
+						<td class="product">
+							<a href="https://amzn.to/38EdCcV" target="_blank">
+								<img src="images/product20.jpg" alt="fig" class="product-img">
+								<div class="product-description">
+									<p>Green Creeping Fig 2 Plants - Ficus - 3" Pot</p>
+									<p>$5.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/36J7Ft8" target="_blank">
+								<img src="images/product21.jpg" alt="zoo" class="product-img">
+								<div class="product-description">
+									<p>Zoo Med New Zealand Sphagnum Moss, .33lb</p>
+									<p>$12.26</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2Eqk3Cy" target="_blank">
+								<img src="images/product22.jpg" alt="coco" class="product-img">
+								<div class="product-description">
+									<p>Zoo Med Eco Earth Loose Coconut Fiber Substrate</p>
+									<p>$7.19</p>
+								</div>
+							</a>
+						</td>
+					</tr>
 				</table>
 			</div>
 		</article>
