--- a/home.html
+++ b/home.html
@@ -28,6 +28,15 @@
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
+			<img src="images/dropdown.png" height="40px" alt="Menu" class="dropdown-icon">
+			<div class="dropdown">
+				<ul>
+					<li><a href="home.html">Home</a></li>
+					<li><a href="shop.html">Shop</a></li>
+					<li><a href="social.html">Social Links</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+				</ul>
+			</div>
 		</div>
 
 		<div class="title-section">
