--- a/shop.html
+++ b/shop.html
@@ -237,6 +237,24 @@
 								</div>
 							</a>
 						</td>
+						<td class="product">
+							<a href="https://amzn.to/2YV7Lvi" target="_blank">
+								<img src="images/product23.jpg" alt="char" class="product-img">
+								<div class="product-description">
+									<p>Horticultural Charcoal, 100% All Natural Hardwood</p>
+									<p>$10.49</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/35waEFr" target="_blank">
+								<img src="images/product24.jpg" alt="co" class="product-img">
+								<div class="product-description">
+									<p>Exo Terra Coco Husk Terrarium Substrate</p>
+									<p>$3.59</p>
+								</div>
+							</a>
+						</td>
 					</tr>
 				</table>
 			</div>
