--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="keywords" content="plants, terrariums, terrariums plants">
+		<meta description="The place to be for plants, terrariums, critter enclosures and more...">
 		<title>Rainier Terrariums</title>
 		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
