--- a/shop.html
+++ b/shop.html
@@ -192,7 +192,7 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2Ep4ACw" target="_blank">
-								<img src="images/product18.jpg" alt="iso" class="product-img">
+								<img src="images/product18.png" alt="iso" class="product-img">
 								<div class="product-description">
 									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
 									<p>$39.99</p>
@@ -201,7 +201,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2RXYLEg" target="_blank">
-								<img src="images/product19.jpg" alt="rock" class="product-img">
+								<img src="images/product19.png" alt="rock" class="product-img">
 								<div class="product-description">
 									<p>Natural Slate Stone -1 to 3 inch Rocks</p>
 									<p>$15.95</p>
@@ -210,7 +210,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/38EdCcV" target="_blank">
-								<img src="images/product20.jpg" alt="fig" class="product-img">
+								<img src="images/product20.png" alt="fig" class="product-img">
 								<div class="product-description">
 									<p>Green Creeping Fig 2 Plants - Ficus - 3" Pot</p>
 									<p>$5.99</p>
