--- a/shop.html
+++ b/shop.html
@@ -192,7 +192,7 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2Ep4ACw" target="_blank">
-								<img src="images/product18.png" alt="iso" class="product-img">
+								<img src="images/product18.png" alt="Iso" class="product-img">
 								<div class="product-description">
 									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
 									<p>$39.99</p>
