--- a/home.html
+++ b/home.html
@@ -28,6 +28,15 @@
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
+			<nav class="collapse-navbar">
+				<img src="images/dropdown.png" alt="Pages" class="dropdown-btn">
+				<ul class="dropdown">
+					<li><a href="home.html">Home</a></li>
+					<li><a href="shop.html">Shop</a></li>
+					<li><a href="social.html">Social Links</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+				</ul>
+			</nav>
 		</div>
 
 		<div class="title-section">
