--- a/shop.html
+++ b/shop.html
@@ -230,7 +230,7 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2YYpBxm" target="_blank">
-								<img src="images/product22.jpg" alt="coco" class="product-img">
+								<img src="images/product22.jpg" alt="Coco" class="product-img">
 								<div class="product-description">
 									<p>Zoo Med Eco Earth (Single Brick)</p>
 									<p>$4.19</p>
