--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="keywords" content="plants, terrariums, terrariums plants">
+		<meta name="keywords" content="plants, terrariums, terrariums plants, vivarium, vivariums, bioactive terrarium, bioactive, bioactive vivarium, isopods ">
 		<meta description="The place to be for plants, terrariums, critter enclosures and more...">
 		<title>Rainier Terrariums</title>
 		<link rel="stylesheet" href="styles.css">
