--- a/shop.html
+++ b/shop.html
@@ -49,7 +49,7 @@
 		</ul>
 
 		<article>
-			<div class="content">
+			<div class="content" style="margin-top: 125px">
 				<table>
 					<tr>
 						<td class="product">
