--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
 		<link rel="shortcut icon" href="images/favicon.ico">
+		<script data-ad-client="ca-pub-8691955634362390" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154593775-1"></script>
 		<script>
