--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 					<p>Send questions, feedback and comments:</p>
 					<textarea name="comment" cols="60" rows="5" placeholder="Type here..."></textarea>
 					<br/>
-					<input type="submit" value="Send Form"/>
+					<input type="submit" value="Send"/>
 				</form>
 			</div>
 		</article>
