--- a/shop.html
+++ b/shop.html
@@ -237,28 +237,19 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/36J7Ft8" target="_blank">
-								<img src="images/product21.jpg" alt="zoo" class="product-img">
-								<div class="product-description">
-									<p>Zoo Med New Zealand Sphagnum Moss, .33lb</p>
-									<p>$12.26</p>
-								</div>
-							</a>
-						</td>
-					</tr>
-					<tr>
-						<td class="product">
 							<a href="https://amzn.to/2YYpBxm" target="_blank">
-								<img src="images/product22.jpg" alt="Coco" class="product-img">
+								<img src="images/product21.jpg" alt="Coco" class="product-img">
 								<div class="product-description">
 									<p>Zoo Med Eco Earth (Single Brick)</p>
 									<p>$4.19</p>
 								</div>
 							</a>
 						</td>
+					</tr>
+					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2YV7Lvi" target="_blank">
-								<img src="images/product23.jpg" alt="char" class="product-img">
+								<img src="images/product22.png" alt="char" class="product-img">
 								<div class="product-description">
 									<p>Horticultural Charcoal, 100% All Natural Hardwood</p>
 									<p> $10.49 </p>
@@ -267,7 +258,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/35waEFr" target="_blank">
-								<img src="images/product24.jpg" alt="co" class="product-img">
+								<img src="images/product23.png" alt="co" class="product-img">
 								<div class="product-description">
 									<p>Exo Terra Coco Husk Terrarium Substrate</p>
 									<p>$3.59</p>
