--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Rainier Terrariums</title>
+		<title>Contact Us - Rainier Terrariums</title>
 		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
 		<link rel="shortcut icon" href="images/favicon.ico">
