--- a/shop.html
+++ b/shop.html
@@ -241,7 +241,7 @@
 								<img src="images/product21.jpg" alt="Coco" class="product-img">
 								<div class="product-description">
 									<p>Zoo Med Eco Earth (Single Brick)</p>
-									<p>$4.19</p>
+									<p> $4.19 </p>
 								</div>
 							</a>
 						</td>
@@ -265,6 +265,25 @@
 								</div>
 							</a>
 						</td>
+					</td>
+					<td class="product">
+						<a href="https://amzn.to/2SmWnHr" target="_blank">
+							<img src="images/product24.jpg" alt="led" class="product-img">
+							<div class="product-description">
+								<p>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs</p>
+								<p>$31.99 </p>
+							</div>
+						</a>
+					</td>
+					<td class="product">
+						<a href="https://amzn.to/2rjaUsv" target="_blank">
+							<img src="images/product25.jpg" alt="slant" class="product-img">
+							<div class="product-description">
+								<p>GLASS SLANT BOWL/GLASS TERRARIUM SET OF 2</p>
+								<p>$24.99 </p>
+							</div>
+						</a>
+					</td>
 					</tr>
 				</table>
 			</div>
