--- a/shop.html
+++ b/shop.html
@@ -285,6 +285,38 @@
 						</a>
 					</td>
 					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2tzzi9R" target="_blank">
+								<img src="images/product26.jpg" alt="spring" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Premium Live Springtails 16oz Mini Culture</p>
+									<p>$19.99 </p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2EFSTri" target="_blank">
+								<img src="images/product27.jpg" alt="iso" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Pocket Pets Fast Producing Roly Polys</p>
+									<p>$22.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2EKMhrL" target="_blank">
+								<img src="images/product28.jpg" alt="sub" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p> Isopod Substrate ISO Mix Bioactive Substrate Bedding</p>
+									<p>$11.99</p>
+								</div>
+							</a>
+						</td>
+					</tr>
 				</table>
 			</div>
 		</article>
