--- a/shop.html
+++ b/shop.html
@@ -298,7 +298,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2EFSTri" target="_blank">
-								<img src="images/product27.jpg" alt="iso" class="product-img">
+								<img src="images/product27.png" alt="iso" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Pocket Pets Fast Producing Roly Polys</p>
