--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 	</head>
 	<body>
 		<div class="navbar">
-			<img src="images/logo.png" alt="Logo" height="60px" class="logo">
-			<h1>Rainier Terrariums</h1>
+			<img src="images/text-logo.png" alt="Rainier Terrariums" class="nav-logo">
 
 			<nav class="expand-navbar">
 				<ul>
