--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 			<nav class="expand-navbar">
 				<ul>
-					<li><a href="home.html">Home</a></li>
+					<li class="active-page">Home</li>
 					<li><a href="shop.html">Shop</a></li>
 					<li><a href="social.html">Social Links</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
