--- a/shop.html
+++ b/shop.html
@@ -31,8 +31,8 @@
 
 			<nav class="expand-navbar">
 				<ul>
-					<li><a href="home.html">Home</a></li>
-					<li><a href="shop.html">Shop</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li class="active-page">Shop</li>
 					<li><a href="social.html">Social Links</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
