--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,10 @@
 
 			<nav class="expand-navbar">
 				<ul>
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="shop.html">Shop</a></li>
 					<li><a href="social.html">Social Links</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
+					<li class="active-page">Contact Us</li>
 				</ul>
 			</nav>
 			<nav class="collapse-navbar">
