--- a/social.html
+++ b/social.html
@@ -31,9 +31,9 @@
 
 			<nav class="expand-navbar">
 				<ul>
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="shop.html">Shop</a></li>
-					<li><a href="social.html">Social Links</a></li>
+					<li class="active-page">Social Links</li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
