--- a/index.html
+++ b/index.html
@@ -47,14 +47,17 @@
 			<li><a href="home.html">Home</a></li>
 			<li><a href="shop.html">Shop</a></li>
 			<li><a href="social.html">Social Links</a></li>
-			<li><a href="contact.html">Contact Us</a></li>
+	  	<li><a href="contact.html">Contact Us</a></li>
 		</ul>
-
 		<div class="title-section">
 			<div class="title-box">
 				<img src="images/text-logo.png" alt="Text Logo" class="text-logo">
 				<h1 class="subtitle">The place to be for plants, terrariums, critter enclosures and more...</h1>
 			</div>
 		</div>
+		<footer>
+			<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
+			<h3>&copy; 2019 Kelson Milewski & Ryan Schlosser</h3>
+		</footer>
 	</body>
 </html>
