Added footer, removed social page, updated index links

--- a/shop.html
+++ b/shop.html
@@ -33,7 +33,6 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li class="active-page">Shop</li>
-					<li><a href="social.html">Social Links</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
@@ -42,9 +41,8 @@
 			</nav>
 		</div>
 		<ul class="dropdown" id="dropdown">
-			<li><a href="home.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="shop.html">Shop</a></li>
-			<li><a href="social.html">Social Links</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 
@@ -319,5 +317,14 @@
 				</table>
 			</div>
 		</article>
+		<footer>
+			<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
+			<h3 style="margin: 0; padding-top: 40px;">&copy; 2019 Kelson Milewski & Ryan Schlosser</h3>
+			<div class="footer-social-section">
+				<a href="https://www.instagram.com/rainier_terrariums/"><img src="images/footer-insta-white.png" alt="Instagram" class="footer-social"></a>
+				<a href="https://twitter.com/rterrariums"><img src="images/footer-twitter-white.png" alt="Twitter" class="footer-social"></a>
+				<a href="https://www.facebook.com/rainier.terrariums"><img src="images/footer-facebook-white.png" alt="Facebook" class="footer-social"></a>
+			</div>
+		</footer>
 	</body>
 </html>
