--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,6 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="shop.html">Shop</a></li>
-					<li><a href="social.html">Social Links</a></li>
 					<li class="active-page">Contact Us</li>
 				</ul>
 			</nav>
@@ -42,12 +41,10 @@
 			</nav>
 		</div>
 		<ul class="dropdown" id="dropdown">
-			<li><a href="home.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="shop.html">Shop</a></li>
-			<li><a href="social.html">Social Links</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
-
 		<article style="height: 100vh;">
 			<div class="content" style="margin-top: 150px;">
 				<form name="Feedback" method="post" action="mailto:rainierterrariums@gmail.com" enctype="text/plain">
@@ -58,6 +55,15 @@
 					<input type="submit" value="Send"/>
 				</form>
 			</div>
+			<footer style="position: absolute; bottom: 0; width: 100%;">
+				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
+				<h3 style="margin: 0; padding-top: 40px;">&copy; 2019 Kelson Milewski & Ryan Schlosser</h3>
+				<div class="footer-social-section">
+					<a href="https://www.instagram.com/rainier_terrariums/"><img src="images/footer-insta-white.png" alt="Instagram" class="footer-social"></a>
+					<a href="https://twitter.com/rterrariums"><img src="images/footer-twitter-white.png" alt="Twitter" class="footer-social"></a>
+					<a href="https://www.facebook.com/rainier.terrariums"><img src="images/footer-facebook-white.png" alt="Facebook" class="footer-social"></a>
+				</div>
+			</footer>
 		</article>
 	</body>
 </html>
