--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 				<ul>
 					<li class="active-page">Home</li>
 					<li><a href="shop.html">Shop</a></li>
-					<li><a href="social.html">Social Links</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
@@ -44,10 +43,9 @@
 			</nav>
 		</div>
 		<ul class="dropdown" id="dropdown">
-			<li><a href="home.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="shop.html">Shop</a></li>
-			<li><a href="social.html">Social Links</a></li>
-	  	<li><a href="contact.html">Contact Us</a></li>
+	  		<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 		<div class="title-section">
 			<div class="title-box">
@@ -55,9 +53,5 @@
 				<h1 class="subtitle">The place to be for plants, terrariums, critter enclosures and more...</h1>
 			</div>
 		</div>
-		<footer>
-			<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
-			<h3>&copy; 2019 Kelson Milewski & Ryan Schlosser</h3>
-		</footer>
 	</body>
 </html>
