--- a/shop.html
+++ b/shop.html
@@ -313,6 +313,100 @@
 								</div>
 							</a>
 						</td>
+						<td class="product">
+							<a href="https://amzn.to/2sBi1gu" target="_blank">
+								<img src="images/product29.jpg" alt="c" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p> ELYSAID 2pcs Empty Clear Glass Bottles Vials</p>
+									<p>$9.98</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2tiKuI1" target="_blank">
+								<img src="images/product30.jpg" alt="co" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Circleware 32510 Terraria Plant Glass Terrarium Home Decor</p>
+									<p>$18.34</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2ZJPdP8" target="_blank">
+								<img src="images/product31.jpg" alt="cor" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Anchor Hocking 1-Gallon Glass Jar with Cover</p>
+									<p>$24.82</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2tmAopC" target="_blank">
+								<img src="images/product32.jpg" alt="cork" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>1 Gallon glass Jug</p>
+									<p>$12.97</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/36cORCN" target="_blank">
+								<img src="images/product33.jpg" alt="corks" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Bormioli Rocco Clear Glass Jar</p>
+									<p>$19.90</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/36fDs5c" target="_blank">
+								<img src="images/product34.jpg" alt="r" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Succulent and Cactus Bonsai DIY Rocks</p>
+									<p>$8.95 </p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/37qDszs" target="_blank">
+								<img src="images/product35.jpg" alt="ro" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Natural Slate Stone - Less than 1/8 inch</p>
+									<p>$8.94</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2SGSsVP" target="_blank">
+								<img src="images/product36.jpg" alt="roc" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Josh's Frogs ABG Mix (4 Quart/1 Gallon)</p>
+									<p>$17.56</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2MIOicr" target="_blank">
+								<img src="images/product37.jpg" alt="s" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>EXO-TERRA Plantation Soil Terrarium Substrate</p>
+									<p>$3.99</p>
+								</div>
+							</a>
+						</td>
 					</tr>
 				</table>
 			</div>
