Fixed footer on contact.html

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 					<input type="submit" value="Send"/>
 				</form>
 			</div>
-			<footer>
+			<footer style="position: absolute; bottom: 0; width: 100%;">
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
 				<h3 style="margin: 0; padding-top: 40px;">&copy; 2019 Kelson Milewski & Ryan Schlosser</h3>
 				<div class="footer-social-section">
