--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="shop.html">Shop</a></li>
+						<li><a href="PlantCare.html">Plant Care</a></li>
 					<li class="active-page">Contact Us</li>
 				</ul>
 			</nav>
@@ -43,6 +44,7 @@
 		<ul class="dropdown" id="dropdown">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="shop.html">Shop</a></li>
+				<li><a href="PlantCare.html">Plant Care</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 		<article style="height: 100vh;">
