Added viewport (fixes mobile compatability?)

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="keywords" content="plants, terrariums, terrariums plants, vivarium, vivariums, bioactive terrarium, bioactive, bioactive vivarium, isopods ">
 		<meta description="The place to be for plants, terrariums, critter enclosures and more...">
 		<title>Rainier Terrariums - Plants, Terrariums, Critter Enclosures and More</title>
