--- a/PlantCare.html
+++ b/PlantCare.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title> Plant Care - Rainier Terrariums</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Plant Care - Rainier Terrariums</title>
 		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
 		<link rel="shortcut icon" href="images/favicon.ico">
