--- a/materials.html
+++ b/materials.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Materials - Shop - Rainier Terrariums</title>
 		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
