--- a/PlantCare.html
+++ b/PlantCare.html
@@ -36,7 +36,8 @@
 	</head>
 	<body>
 		<div class="navbar">
-			<img src="images/text-logo.png" alt="Rainier Terrariums" class="nav-logo">
+			<img src="images/text-logo.png" alt="Rainier Terrariums" class="nav-text-logo">
+			<img src="images/logo.png" alt="Rainier Terrariums" class="nav-logo">
 
 			<nav class="expand-navbar">
 				<ul>
@@ -62,8 +63,8 @@
 		<ul class="dropdown" id="dropdown">
 			<li><a href="index.html">Home</a></li>
 			<li onclick="showHideSubNav()" style="cursor: pointer"><a>Shop</a></li>
-			<li class="active-page">Plant Care</li>
-	  		<li><a href="contact.html">Contact Us</a></li>
+			<li style="text-align: center;" class="active-page">Plant<br/>Care</li>
+	  		<li style="text-align: center;"><a href="contact.html">Contact<br/>Us</a></li>
 		</ul>
 		<ul class="sub-dropdown" id="sub-dropdown">
 			<li><a href="shop.html">All</a></li>
