--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 						<a class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
 							<li><a href="shop.html">All</a></li>
-							<li><a href="terrariums.html">Terrariums</a></li> 
+							<li><a href="terrariums.html">Terrariums</a></li>
 							<li><a href="materials.html">Materials</a></li>
 							<li><a href="plants.html">Plants</a></li>
 							<li><a href="critters.html">Critters</a></li>
@@ -75,7 +75,7 @@
 		</ul>
 		<article style="height: 100vh;">
 			<div class="content" style="margin-top: 150px;">
-				<form name="Feedback" method="post" action="mailto:rainierterrariums@gmail.com" enctype="text/plain">
+				<form name="Feedback" method="post" action="mailto:raineirterrariumsbusiness@gmail.com" enctype="text/plain">
 					<h2>Email Us</h2>
 					<p>Send questions, feedback and comments:</p>
 					<textarea name="comment" cols="60" rows="5" placeholder="Type here..."></textarea>
