--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
 						<a class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
 							<li><a href="shop.html">All</a></li>
-							<li><a href="terrariums.html">Terrariums</a></li> 
+							<li><a href="terrariums.html">Terrariums</a></li>
 							<li><a href="materials.html">Materials</a></li>
 							<li><a href="plants.html">Plants</a></li>
 							<li><a href="critters.html">Critters</a></li>
 						</ul>
 					</li>
 					<li><a href="PlantCare.html">Plant Care</a></li>
+					<li><a href="CritterCare.html">Critter Care</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
@@ -66,6 +67,7 @@
 			<li class="active-page">Home</li>
 			<li onclick="showHideSubNav()" style="cursor: pointer"><a>Shop</a></li>
 			<li style="text-align: center;"><a href="PlantCare.html">Plant<br/>Care</a></li>
+			<li style="text-align: center;"><a href="CritterCare.html">Critter<br/>Care</a></li>
 	  		<li style="text-align: center;"><a href="contact.html">Contact<br/>Us</a></li>
 		</ul>
 		<ul class="sub-dropdown" id="sub-dropdown">
