--- a/plants.html
+++ b/plants.html
@@ -53,6 +53,7 @@
 						</ul>
 					</li>
 					<li><a href="PlantCare.html">Plant Care</a></li>
+					<li><a href="CritterCare.html">Critter Care</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
