--- a/PlantCare.html
+++ b/PlantCare.html
@@ -46,13 +46,14 @@
 						<a class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
 							<li><a href="shop.html">All</a></li>
-							<li><a href="terrariums.html">Terrariums</a></li> 
+							<li><a href="terrariums.html">Terrariums</a></li>
 							<li><a href="materials.html">Materials</a></li>
 							<li><a href="plants.html">Plants</a></li>
 							<li><a href="critters.html">Critters</a></li>
 						</ul>
 					</li>
 					<li class="active-page">Plant Care</li>
+						<li><a href="CritterCare.html">Critter Care</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
@@ -64,6 +65,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li onclick="showHideSubNav()" style="cursor: pointer"><a>Shop</a></li>
 			<li style="text-align: center;" class="active-page">Plant<br/>Care</li>
+			<li style="text-align: center;"><a href="CritterCare.html">Critter<br/>Care</a></li>
 	  		<li style="text-align: center;"><a href="contact.html">Contact<br/>Us</a></li>
 		</ul>
 		<ul class="sub-dropdown" id="sub-dropdown">
