--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,7 @@
 						</ul>
 					</li>
 					<li><a href="PlantCare.html">Plant Care</a></li>
+					<li><a href="CritterCare.html">Critter Care</a></li>
 					<li class="active-page">Contact Us</li>
 				</ul>
 			</nav>
@@ -64,6 +65,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li onclick="showHideSubNav()" style="cursor: pointer"><a>Shop</a></li>
 			<li style="text-align: center;"><a href="PlantCare.html">Plant<br/>Care</a></li>
+			<li style="text-align: center;"><a href="CritterCare.html">Critter<br/>Care</a></li>
 	  		<li style="text-align: center;" class="active-page">Contact<br/>Us</li>
 		</ul>
 		<ul class="sub-dropdown" id="sub-dropdown">
