--- a/critters.html
+++ b/critters.html
@@ -38,7 +38,7 @@
 		<div class="navbar">
 			<img src="images/text-logo.png" alt="Rainier Terrariums" class="nav-text-logo">
 			<img src="images/logo.png" alt="Rainier Terrariums" class="nav-logo">
-			
+
 			<nav class="expand-navbar">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -46,13 +46,14 @@
 						<a class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
 							<li><a href="shop.html">All</a></li>
-							<li><a href="terrariums.html">Terrariums</a></li> 
+							<li><a href="terrariums.html">Terrariums</a></li>
 							<li><a href="materials.html">Materials</a></li>
 							<li><a href="plants.html">Plants</a></li>
 							<li class="active-page">Critters</li>
 						</ul>
 					</li>
 					<li><a href="PlantCare.html">Plant Care</a></li>
+					<li><a href="CritterCare.html">Critter Care</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
@@ -73,7 +74,7 @@
 			<li><a href="plants.html">Plants</a></li>
 			<li class="active-page">Critters</li>
 		</ul>
-		
+
 		<article>
             <div class="content" style="margin-top: 125px">
 				<table>
