--- a/terrariums.html
+++ b/terrariums.html
@@ -46,13 +46,14 @@
 						<a class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
 							<li><a href="shop.html">All</a></li>
-							<li class="active-page">Terrariums</li> 
+							<li class="active-page">Terrariums</li>
 							<li><a href="materials.html">Materials</a></li>
 							<li><a href="plants.html">Plants</a></li>
 							<li><a href="critters.html">Critters</a></li>
 						</ul>
 					</li>
 					<li><a href="PlantCare.html">Plant Care</a></li>
+					<li><a href="CritterCare.html">Critter Care</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
@@ -73,7 +74,7 @@
 			<li><a href="plants.html">Plants</a></li>
 			<li><a href="critters.html">Critters</a></li>
 		</ul>
-		
+
 		<article>
             <div class="content" style="margin-top: 125px">
 				<table>
