Added Store items

--- a/critters.html
+++ b/critters.html
@@ -108,7 +108,39 @@
 								</div>
 							</a>
 						</td>
+						<td class="product">
+							<a href="https://amzn.to/35vaQ6J" target="_blank">
+								<img src="images/product40.jpg" alt="mus" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Josh's Frogs Temperate Springtail Culture </p>
+									<p>$19.99</p>
+								</div>
+							</a>
+						</td>
 					</tr>
+					<tr>
+					<td class="product">
+						<a href="https://amzn.to/37FBPOM" target="_blank">
+							<img src="images/product42.jpg" alt="mushr" class="product-img">
+							<div class="product-description">
+								<br/>
+								<p> Live Orange Smoothie Roly Polys! Rolie Polie Isopods</p>
+								<p>$9.99</p>
+							</div>
+						</a>
+					</td>
+					<td class="product">
+						<a href="https://amzn.to/39Kjqlo" target="_blank">
+							<img src="images/product43.jpg" alt="mushro" class="product-img">
+							<div class="product-description">
+								<br/>
+								<p> Powder Orange Isopods Cleanup Crew</p>
+								<p>$26.99</p>
+							</div>
+						</a>
+					</td>
+				</tr>
 				</table>
             </div>
         </article>
