--- a/materials.html
+++ b/materials.html
@@ -174,6 +174,16 @@
 								</div>
 							</a>
 						</td>
+						<td class="product">
+							<a href="https://amzn.to/2SVg0GF" target="_blank">
+								<img src="images/product41.jpg" alt="mush" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Josh's Frogs Horticultural Charcoal (1 Quart)</p>
+									<p>$10.98</p>
+								</div>
+							</a>
+						</td>
 					</tr>
 				</table>
             </div>
