Added featured section on index + minor fixes

--- a/index.html
+++ b/index.html
@@ -83,5 +83,60 @@
 				<h1 class="subtitle">The place to be for plants, terrariums, critter enclosures and more...</h1>
 			</div>
 		</div>
+		<article>
+			<div class="content">
+				<h1 style="text-align: center">Featured Products</h1>
+				<table>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2rIoe9X" target="_blank">
+								<img src="images/Product3.png" alt="kook" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>KooK Geometric Glass Terrarium</p>
+									<p>$21.95</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2PiIRm8" target="_blank">
+								<img src="images/product9.png" alt="mini" class="product-img">
+								<div class="product-description">
+									<p>Mini Ferns for Terrariums/Fairy Garden </p>
+									<p>$14.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2PMI63O" target="_blank">
+								<img src="images/product12.png" alt="5" class="product-img">
+								<div class="product-description">
+									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
+									<p>$17.95</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2SmWnHr" target="_blank">
+								<img src="images/product24.jpg" alt="led" class="product-img">
+								<div class="product-description">
+									<p>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs</p>
+									<p>$31.99 </p>
+								</div>
+							</a>
+						</td>
+					</tr>
+				</table>
+			</div>
+		</article>
+		<footer>
+			<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
+			<h3 style="margin: 0; padding-top: 40px;">&copy; 2019 Kelson Milewski & Ryan Schlosser</h3>
+			<div class="footer-social-section">
+				<a href="https://www.instagram.com/rainier_terrariums/" target="_blank"><img src="images/footer-insta-white.png" target="_blank" alt="Instagram" class="footer-social"></a>
+				<a href="https://twitter.com/rterrariums" target="_blank"><img src="images/footer-twitter-white.png" target="_blank" alt="Twitter" class="footer-social"></a>
+				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/footer-facebook-white.png" target="_blank" alt="Facebook" class="footer-social"></a>
+			</div>
+		</footer>
 	</body>
 </html>
