Footer effects + send btn

--- a/contact.html
+++ b/contact.html
@@ -79,10 +79,10 @@
 			<div class="content" style="margin-top: 150px;">
 				<form name="Feedback" method="post" action="mailto:raineirterrariumsbusiness@gmail.com" enctype="text/plain">
 					<h2>Email Us</h2>
-					<p>Send questions, feedback and comments:</p>
+					<p>Feel free to send us any questions you may have, feedback, or suggestions. Your opinion is greatly appreciated and will help us provide a better experience for our users.</p>
 					<textarea name="comment" cols="60" rows="5" placeholder="Type here..."></textarea>
 					<br/>
-					<input type="submit" value="Send"/>
+					<input type="submit" value="Send" class="send-btn"/>
 				</form>
 			</div>
 			<footer style="position: absolute; bottom: 0; width: 100%;">
