--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
 				</table>
 			</div>
 		</article>
+		<!--section in developement
+		<div class="background-section" style="background-image: url(images/index-background.png);">
+			<div class="background-section-content">
+				<h1>What Are We?</h1>
+				<h2>We provide a variety of products for terrariums, plants, and small critters like isopods and springtails. We also provide information on plant care and caring for small critters.</h2>
+			</div>
+		</div>
+		-->
 		<footer>
 			<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
 			<h3 style="margin: 0; padding-top: 40px;">&copy; 2019 Kelson Milewski & Ryan Schlosser</h3>
